@@ -1168,6 +1168,10 @@
 1281 On Wake On Lan
 1282 Wake On Lan order send
 1283 Do you want a Wake On Lan on this computer
+1292 Use the advanced options of teledeploy
+1293 Teledeploy force
+1294 Installation time
+1295 Installation date
 1296 Trade offer
 1297 SNMP device identification
 1298 QRCode administration
