@@ -1,5 +1,6 @@
 Revision history for ocsreports
 2.1
+		* add advanced options for teledeploy
 		* change ocs logo
 		* add wake on lan on computer
 		* add wake on lan on multi search
